Top menu link highlighting fix
The entire background of the top menu entries is now highlighted when
hovered over. There's a small gap in between the entries that I would
like to get rid of but don't quite know how.

--- a/nap-www/napwww/public/nap.css
+++ b/nap-www/napwww/public/nap.css
@@ -34,6 +34,22 @@ html, body {
 .menu_link {
     display: block;
     line-height: 30px;
+	height: 37px;
+	padding: 0;
+	padding-left: 5px;
+	padding-right: 5px;
+	border-top: 3px solid;
+	border-top-color: #2d2d2d;
+}
+.menu_link:hover {
+	border-top-color: #444444;
+}
+
+.menu_link_active {
+	border-top-color: #dd4b39;
+}
+.menu_link_active:hover {
+	border-top-color: #dd4b39;
 }
 
 a.menu_link {
